Fix layout preview spacing with custom buttons

--- a/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-block.less
+++ b/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-block.less
@@ -395,6 +395,7 @@
             overflow: hidden;
             transform: translateY(0px);
             transition: transform 0.15s ease;
+            .custom-buttons-spacing-mobile(30px, 8);
         }
 
         &__preview.is-active {
@@ -464,6 +465,7 @@
 
             &__preview {
                 right: 95px;
+                .custom-buttons-spacing(95px, 8);
             }
         }
     }
@@ -795,5 +797,21 @@
 
     &__item .umb-nested-content__item--single {
         border: none;
+    }
+}
+
+.custom-buttons-spacing-mobile(@origPx, @n) when (@n > 0) {
+    .custom-buttons-spacing-mobile(@origPx, (@n - 1));
+
+    &.custom-buttons-@{n} {
+        right: calc(@origPx + @n * (@block-margin - 1rem));
+    }
+}
+
+.custom-buttons-spacing(@origPx, @n) when (@n > 0) {
+    .custom-buttons-spacing(@origPx, (@n - 1));
+
+    &.custom-buttons-@{n} {
+        right: calc(@origPx + @n * @block-margin);
     }
 }
